Condensed Code requirements for setting up WBC and random removal

--- a/Code/Wole-Paper1/finalVersions/augmentationNullF1CrossVal.ipynb
+++ b/Code/Wole-Paper1/finalVersions/augmentationNullF1CrossVal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeAtRandom(df, cols, percentRemoved):\n",
+    "    print(df.shape)\n",
+    "    print(df.dropna().shape)\n",
+    "    numEntriesNeedingNulls = math.floor(df.shape[0] * percentRemoved)\n",
+    "    numEntriesWithNulls = df.shape[0] - df.dropna().shape[0]\n",
+    "    array = np.array(df)\n",
+    "    for i in range(numEntriesNeedingNulls - numEntriesWithNulls):\n",
+    "        x_index, y_index = genRandomReplaceIndex(array.shape[0], array.shape[1] - 1)\n",
+    "        array[x_index][y_index] = np.nan\n",
+    "    df = pd.DataFrame(array, columns = cols[1:])\n",
+    "    return df, cols\n",
+    "\n",
+    "def prepWBC():\n",
+    "    raw_df = pd.read_csv('../../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
+    "    cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
+    "    raw_df.columns = cols\n",
+    "    raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
+    "                    {2:0,4:1})\n",
+    "    temp = []\n",
+    "    for index, row in raw_df.iterrows():\n",
+    "        if '?' not in row.values:\n",
+    "            temp.append(row)\n",
+    "        else:\n",
+    "            temp.append(row.replace('?', np.nan))\n",
+    "\n",
+    "            \n",
+    "    df = pd.DataFrame(np.array(temp), columns=cols)\n",
+    "    df = df[cols[1:]]\n",
+    "    return df, cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -263,30 +300,10 @@
    "source": [
     "random.seed(42)\n",
     "np.random.seed(42)\n",
-    "raw_df = pd.read_csv('../../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
-    "cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
-    "raw_df.columns = cols\n",
-    "raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
-    "                   {2:0,4:1})\n",
-    "temp = []\n",
-    "for index, row in raw_df.iterrows():\n",
-    "    if '?' not in row.values:\n",
-    "        temp.append(row)\n",
-    "    else:\n",
-    "        temp.append(row.replace('?', np.nan))\n",
+    "df, cols = prepWBC()\n",
+    "df, cols = removeAtRandom(df, cols, 0.33)\n",
     "\n",
-    "        \n",
-    "df = pd.DataFrame(np.array(temp), columns=cols)\n",
-    "df = df[cols[1:]]\n",
-    "print(df.shape)\n",
-    "print(df.dropna().shape)\n",
-    "numEntriesNeedingNulls = math.floor(df.shape[0] * 0.33)\n",
-    "numEntriesWithNulls = df.shape[0] - df.dropna().shape[0]\n",
-    "array = np.array(df)\n",
-    "for i in range(numEntriesNeedingNulls - numEntriesWithNulls):\n",
-    "    x_index, y_index = genRandomReplaceIndex(array.shape[0], array.shape[1] - 1)\n",
-    "    array[x_index][y_index] = np.nan\n",
-    "df = pd.DataFrame(array, columns = cols[1:])\n",
+    "\n",
     "print(df.shape)\n",
     "print(df.dropna().shape)\n",
     "\n",
@@ -309,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -336,40 +353,17 @@
    "source": [
     "random.seed(42)\n",
     "np.random.seed(42)\n",
-    "raw_df = pd.read_csv('../../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
-    "cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
-    "raw_df.columns = cols\n",
-    "raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
-    "                   {2:0,4:1})\n",
-    "temp = []\n",
-    "for index, row in raw_df.iterrows():\n",
-    "    if '?' not in row.values:\n",
-    "        temp.append(row)\n",
-    "    else:\n",
-    "        temp.append(row.replace('?', np.nan))\n",
+    "df, cols = prepWBC()\n",
+    "df, cols = removeAtRandom(df, cols, 0.33)\n",
     "\n",
-    "        \n",
-    "df = pd.DataFrame(np.array(temp), columns=cols)\n",
-    "df = df[cols[1:]]\n",
-    "print(df.shape)\n",
-    "print(df.dropna().shape)\n",
-    "numEntriesNeedingNulls = math.floor(df.shape[0] * 0.33)\n",
-    "numEntriesWithNulls = df.shape[0] - df.dropna().shape[0]\n",
-    "array = np.array(df)\n",
-    "for i in range(numEntriesNeedingNulls - numEntriesWithNulls):\n",
-    "    x_index, y_index = genRandomReplaceIndex(array.shape[0], array.shape[1] - 1)\n",
-    "    array[x_index][y_index] = np.nan\n",
-    "df = pd.DataFrame(array, columns = cols[1:])\n",
     "print(df.shape)\n",
     "finalDataset = df.dropna()\n",
     "print(finalDataset.shape)\n",
     "\n",
     "for i in finalDataset:\n",
     "    finalDataset[i] = finalDataset[i].astype(np.int)\n",
-    "\n",
     "X = finalDataset[finalDataset.columns[:-1]]\n",
     "y = finalDataset[finalDataset.columns[-1]]\n",
-    "\n",
     "\n",
     "removeNBWBC, removeLogWBC, removeSVMWBC, removeDTWBC, removeVoteWBC = trainF1CrossValModels(X, y, 10)\n",
     "printOutputs(removeNBWBC, removeLogWBC, removeSVMWBC, removeDTWBC, removeVoteWBC)"
@@ -377,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -405,21 +399,9 @@
    "source": [
     "random.seed(42)\n",
     "np.random.seed(42)\n",
-    "raw_df = pd.read_csv('../../../Wisconsin_Database/breast-cancer-wisconsin.data', header=None)\n",
-    "cols = ['ID', 'Thickness', 'SizeUniformity', 'ShapeUniformity', 'Adhesion', 'Size', 'BareNuclei', 'Bland Chromatin', 'Nucleoli', 'Mitoses', 'Diagnosis']\n",
-    "raw_df.columns = cols\n",
-    "raw_df['Diagnosis'] = raw_df['Diagnosis'].map(\n",
-    "                   {2:0,4:1})\n",
-    "temp = []\n",
-    "for index, row in raw_df.iterrows():\n",
-    "    if '?' not in row.values:\n",
-    "        temp.append(row)\n",
-    "    else:\n",
-    "        temp.append(row.replace('?', np.nan))\n",
-    "        \n",
-    "df = pd.DataFrame(np.array(temp), columns=cols)\n",
+    "df, cols = prepWBC()\n",
     "df['BareNuclei'] = df['BareNuclei'].astype(np.float)\n",
-    "df = df[cols[1:]]\n",
+    "\n",
     "print(df.shape)\n",
     "print(df.dropna().shape)\n",
     "numEntriesNeedingNulls = math.floor(df.shape[0] * 0.33)\n",
@@ -448,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
