--- a/Code/Data_Generation/creatingMultiplePatients.ipynb
+++ b/Code/Data_Generation/creatingMultiplePatients.ipynb
@@ -157,7 +157,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('mask_rcnn': conda)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -171,12 +171,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.13 (main, Oct 13 2022, 16:12:30) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "be63c3ded413d13941d2bcea5196def5912f8ddb476b77fb8a36d1d24a59f0c5"
+    "hash": "a21a4d8430ca198249bdb796151de090f5777c48c0e324da81ff190d429db2a2"
    }
   }
  },
