Completed Data Collection

--- a/Code/Wole-Paper1/finalVersions/augmentationNullF1CrossVal.ipynb
+++ b/Code/Wole-Paper1/finalVersions/augmentationNullF1CrossVal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,15 @@
       "Benign: (10945, 24), Benign w/o Nulls: (7970, 24)\n",
       "Malig: (3690, 24), Malig w/o Nulls: (2685, 24)\n",
       "Completed Naive Bayes\n",
-      "Completed Logistic Regression\n"
+      "Completed Logistic Regression\n",
+      "Completed SVM\n",
+      "Completed Decision Tree\n",
+      "Completed Voting Classification\n",
+      "NB Mean Scores: 0.30116871480899776\n",
+      "LR Mean Scores: 0.2615921910713518\n",
+      "SVM Mean Scores: 0.12029955747679569\n",
+      "DT Mean Scores: 0.331985151823801\n",
+      "VC Mean Scores: 0.18589080881535452\n"
      ]
     }
    ],
