--- a/Code/Wole-Paper1/finalVersions/correlation.ipynb
+++ b/Code/Wole-Paper1/finalVersions/correlation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -38,6 +38,7 @@
       "WBC Shape: (683, 11)\n",
       "WBC Ignored Rows: 16\n",
       "(858, 32)\n",
+      "SUM: 55, Len:858\n",
       "(59, 32)\n",
       "(858, 32)\n"
      ]
@@ -98,6 +99,7 @@
     "cervical_df = pd.read_csv('risk_factors_cervical_cancer.csv')\n",
     "cervical_df = cervical_df[cervicalCols]\n",
     "print(cervical_df.shape)\n",
+    "print('SUM: {}, Len:{}'.format(sum(cervical_df['Biopsy']), len(cervical_df['Biopsy'])))\n",
     "cervicalAllNullsRemoved = removeEntriesWithNulls(cervical_df)\n",
     "print(cervicalAllNullsRemoved.shape)\n",
     "\n",
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Oct 13 2022, 16:12:30) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
